Ported to 1.19.3